--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:configChanges="screenSize|orientation"
             android:name=".BaseActivity"
             android:label="@string/app_name" >
             <intent-filter>
