--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:configChanges="screenSize|orientation"
+            android:name=".WordCampDetailActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
