--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.android.support:cardview-v7:21.0.3'
     compile 'com.android.support:palette-v7:21.0.3'
-    compile 'com.github.traex.rippleeffect:library:1.2.3'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.ksoichiro:android-observablescrollview:1.4.0'
+    compile 'com.loopj.android:android-async-http:1.4.5'
+    compile 'com.google.code.gson:gson:2.3.1'
 
 
 }
