added speaker object, removed navbar with change in design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,17 @@
             android:configChanges="screenSize|orientation"
             android:name=".BaseActivity"
             android:label="@string/app_name" >
+
+        </activity>
+        <activity
+            android:configChanges="screenSize|orientation"
+            android:name=".NewWordCampDetail"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:configChanges="screenSize|orientation"
-            android:name=".WordCampDetailActivity"
-            android:label="@string/app_name" >
         </activity>
     </application>
 
