--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,13 @@
 
         <activity
             android:configChanges="screenSize|orientation"
+            android:name=".wcdetails.SessionDetailsActivity"
+            android:label="@string/app_name" >
+
+        </activity>
+
+        <activity
+            android:configChanges="screenSize|orientation"
             android:name=".db.DBTester"
             android:label="@string/app_name" >
 
