show sessions particular to speaker alongwith redirection

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
         <activity
             android:configChanges="screenSize|orientation"
             android:name=".wcdetails.SessionDetailsActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:configChanges="screenSize|orientation"
+            android:name=".wcdetails.SpeakerDetailsActivity"
             android:label="@string/app_name" >
 
         </activity>
