--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="org.wordcamp" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -62,6 +64,8 @@
             android:label="@string/app_name" >
 
         </activity>
+
+        <receiver android:name=".notifs.SessionNotifierReceiver" />
 
     </application>
 
