--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ build/
 # Local configuration file (sdk path, etc)
 local.properties
 
+gradle.properties
+
 # IDEA/Android Studio project files, because
 # the project can be imported from settings.gradle
 .idea
