custom gcm receiver for receiving custom events with Links

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,6 +94,13 @@
                 <action android:name="com.parse.push.intent.OPEN" />
             </intent-filter>
         </receiver>
+
+        <receiver android:name=".networking.CustomGCMReceiver" android:exported="false">
+            <intent-filter>
+                <action android:name="org.wordcamp.UPDATES" />
+            </intent-filter>
+        </receiver>
+
         <receiver android:name="com.parse.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
