--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <permission android:protectionLevel="signature"
-        android:name="org.wordcamp.permission.C2D_MESSAGE" />
-    <uses-permission android:name="org.wordcamp.permission.C2D_MESSAGE" />
+        android:name="org.wordcamp.beta.permission.C2D_MESSAGE" />
+    <uses-permission android:name="org.wordcamp.beta.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
@@ -81,7 +81,7 @@
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-                <category android:name="org.wordcamp" />
+                <category android:name="org.wordcamp.beta" />
             </intent-filter>
         </receiver>
 
