--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,16 +46,11 @@
         <activity
             android:name=".wcdetails.SpeakerDetailsActivity"
             android:configChanges="screenSize|orientation"
-            android:label="@string/app_name">
-
-        </activity>
+            android:label="@string/app_name" />
 
         <activity
-            android:name=".db.DBTester"
-            android:configChanges="screenSize|orientation"
-            android:label="@string/app_name">
-
-        </activity>
+            android:name=".wcdetails.MySessionsActivity"
+            android:configChanges="screenSize|orientation" />
 
         <receiver android:name=".notifs.SessionNotifierReceiver" />
 
