--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
@@ -45,6 +45,11 @@
             android:label="@string/app_name" />
         <activity
             android:name=".wcdetails.SpeakerDetailsActivity"
+            android:configChanges="screenSize|orientation"
+            android:label="@string/app_name" />
+
+        <activity
+            android:name=".FeedbackActivity"
             android:configChanges="screenSize|orientation"
             android:label="@string/app_name" />
 
