--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,3 +57,18 @@ android.buildTypes.all { buildType ->
         }
     }
 }
+
+// For app signing release build type
+if (["storeFile", "storePassword", "keyAlias", "keyPassword"].count { !project.hasProperty(it) } == 0) {
+    android {
+        signingConfigs {
+            release {
+                storeFile = file(project.storeFile)
+                storePassword = project.storePassword
+                keyAlias = project.keyAlias
+                keyPassword = project.keyPassword
+            }
+        }
+    }
+    android.buildTypes.release.signingConfig = android.signingConfigs.release
+}
