--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,14 +39,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
-    compile 'com.android.support:cardview-v7:21.0.3'
+    compile 'com.android.support:cardview-v7:22.1.1'
     compile 'com.loopj.android:android-async-http:1.4.7'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'se.emilsjolander:stickylistheaders:2.6.0'
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    compile 'com.parse.bolts:bolts-android:1.2.0'
 }
 
 android.buildTypes.all { buildType ->
