--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,10 @@ repositories{
 }
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    useLibrary 'org.apache.http.legacy'
+
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "org.wordcamp.android"
