--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ android {
         applicationId "org.wordcamp.android"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 6
-        versionName "1.0-beta-6"
+        versionCode 7
+        versionName "1.0"
     }
 
     buildTypes {
