--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,19 @@ repositories{
     maven {
         url 'http://dl.bintray.com/amulyakhare/maven'
     }
+    maven {
+        url 'https://maven.google.com/'
+        name 'Google'
+    }
 }
+
+ext.supportLibrariesVersion = '27.0.1'
 
 android {
     useLibrary 'org.apache.http.legacy'
 
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.1"
 
     defaultConfig {
         applicationId "org.wordcamp.android"
@@ -41,17 +47,17 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:design:23.0.1'
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.android.support:cardview-v7:23.0.1'
-    compile 'com.android.support:recyclerview-v7:23.0.1'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile "com.android.support:design:$supportLibrariesVersion"
+    compile "com.android.support:appcompat-v7:$supportLibrariesVersion"
+    compile "com.android.support:cardview-v7:$supportLibrariesVersion"
+    compile "com.android.support:recyclerview-v7:$supportLibrariesVersion"
+    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'se.emilsjolander:stickylistheaders:2.6.0'
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     compile 'com.parse.bolts:bolts-android:1.2.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
-    compile 'com.mcxiaoke.volley:library:1.0.17'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
 }
 
 android.buildTypes.all { buildType ->
